@@ -1,14 +1,12 @@
 package be.bonamis.advent.year2023;
 
 import be.bonamis.advent.utils.FileHelper;
-import com.google.common.collect.Multimap;
 import lombok.extern.slf4j.Slf4j;
+import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -24,13 +22,19 @@ class Day02Test {
         String content = FileHelper.content("2023/02/2023_02_03_code.txt");
         List<String> puzzle = Arrays.asList(content.split("\n"));
 
-        assertThat(Day02.solve(puzzle)).isEqualTo(8);
+        assertThat(new Day02(puzzle).solvePart01()).isEqualTo(8);
     }
 
 
     @Test
     void solvePart02() {
+        String line = "Game 1: 3 blue, 4 red; 1 red, 2 green, 6 blue; 2 green";
 
-        assertThat(new Day02(List.of("1abc12", "pqr3stu8vwx")).solvePart02()).isEqualTo(3);
+        assertThat(new Day02(List.of(line)).solvePart02()).isEqualTo(48);
+
+        String content = FileHelper.content("2023/02/2023_02_03_code.txt");
+        List<String> puzzle = Arrays.asList(content.split("\n"));
+
+        assertThat(new Day02(puzzle).solvePart02()).isEqualTo(2286);
     }
 }
